# SQL

./: CMakeLists.txt  LICENSE  main.cpp
parser/: Argument.cpp  Argument.h  Condition.cpp  Condition.hpp  InsertList.cpp  InsertList.hpp  JoinEqual.cpp  JoinEqual.hpp  JoinEqualList.cpp  JoinEqualList.hpp  MathParser.cpp  MathParser.h  Operator.hpp  Parser.cpp  Parser.hpp  Query.hpp  Relation.cpp  Relation.hpp  RelationJoin.cpp  RelationJoin.hpp  RelationTable.cpp  RelationTable.hpp  SFWParser.cpp  SFWParser.h  SeList.cpp  SeList.hpp  Tokenizer.cpp  Tokenizer.h  UpdateEqual.cpp  UpdateEqual.hpp  UpdateEqualList.cpp  UpdateEqualList.hpp  joinEqual.cpp
parser/conditions/: ConditionAnd.cpp  ConditionAnd.hpp  ConditionIdentifier.cpp  ConditionIdentifier.hpp  ConditionLess.cpp  ConditionLess.hpp  ConditionObject.cpp  ConditionObject.hpp
parser/operators/: ConditionMath.cpp  ConditionMath.hpp  ConditionMathExpression.cpp  ConditionMathExpression.hpp  ConditionMathLogical.cpp  ConditionMathLogical.hpp  OperatorIdentifier.cpp  OperatorIdentifier.hpp  OperatorMath.cpp  OperatorMath.hpp  OperatorMinus.cpp  OperatorMinus.hpp  OperatorObject.cpp  OperatorObject.hpp  OperatorPlus.cpp  OperatorPlus.hpp
parser/parse_factory/: MathParser.cpp  MathParser.h  Parser.cpp  Parser.hpp
parser/query/: CreateTable.cpp  CreateTable.hpp  DeleteFrom.cpp  DeleteFrom.hpp  InsertTo.cpp  InsertTo.hpp  InsertToOperatorList.cpp  InsertToOperatorList.hpp  InsertToUpdateList.cpp  InsertToUpdateList.hpp  SFW.cpp  SFW.hpp  UpdateFromWhere.cpp  UpdateFromWhere.hpp
table/: Attributes.hpp  ColumnMeta.cpp  ColumnMeta.hpp  DataBase.cpp  DataBase.hpp  Index.cpp  Index.hpp  Object.cpp  Object.hpp  ObjectFactory.cpp  ObjectFactory.hpp  ObjectTypes.hpp  OrderedIndex.cpp  OrderedIndex.hpp  Row.cpp  Row.hpp  RowFactory.cpp  RowFactory.hpp  Table.cpp  Table.hpp  TableFactory.cpp  TableFactory.hpp  TableMeta.cpp  TableMeta.hpp  UnorderedIndex.cpp  UnorderedIndex.hpp
tests/: Test.cpp
tests/tableTest/: ColumnMetaTest.cpp  DataBaseTest.cpp  ObjectFactoryTest.cpp  ObjectTest.cpp  RowFactoryTest.cpp
